--- a/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/MainPagePutnik.xaml
+++ b/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/MainPagePutnik.xaml
@@ -18,7 +18,7 @@
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
-                <views:ItemsPage />
+                <views:PocetnaPage />
             </x:Arguments>
         </NavigationPage>
     </MasterDetailPage.Detail>
