--- a/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/NewItemPage.xaml
+++ b/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/NewItemPage.xaml
@@ -15,6 +15,7 @@
     <ContentPage.Content>
         <StackLayout Spacing="20" Padding="15">
             <Label Text="Text" FontSize="Medium" />
+            <Label Text="Texsdgsdgdgddt" FontSize="Medium" />
             <Entry Text="{Binding Item.Text}" d:Text="Item name" FontSize="Small" />
             <Label Text="Description" FontSize="Medium" />
             <Editor Text="{Binding Item.Description}" d:Text="Item description" FontSize="Small" Margin="0" />
