--- a/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/PutnikNovostiPage.xaml
+++ b/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/PutnikNovostiPage.xaml
@@ -3,51 +3,44 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:ViewModels="clr-namespace:TuristickaAgencija.Mobile.ViewModels"
              xmlns:converters="clr-namespace:TuristickaAgencija.Mobile.Converters"
              mc:Ignorable="d"
-             x:Class="TuristickaAgencija.Mobile.Views.AktivniTerminiPage">
-    <ContentPage.BindingContext>
-        <ViewModels:TerminiViewModel></ViewModels:TerminiViewModel>
-    </ContentPage.BindingContext>
+             x:Class="TuristickaAgencija.Mobile.Views.PutnikNovostiPage">
     <ContentPage.Resources>
         <converters:ImageConverter x:Key="imgConv"></converters:ImageConverter>
     </ContentPage.Resources>
     <ContentPage.Content>
-        <ScrollView>
+        
         <StackLayout>
-
-            
-                <StackLayout>
-                    <Label Text="AKTUELNA PUTOVANJA" Margin="0,10,0,0" FontSize="12" FontAttributes="Bold" HorizontalOptions="Center"></Label>
-                </StackLayout>
-                <ListView ItemsSource="{Binding TerminiList}" ItemSelected="ListView_ItemSelected">
+            <ListView ItemsSource="{Binding NovostiList}" ItemSelected="ListView_ItemSelected">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout Padding="10">
-                                
-                                <Label Text="{Binding TerminPutovanjaPodaci}"
+                            <StackLayout Padding="20" BackgroundColor="Beige" Margin="0,0,0,5">
+                                <StackLayout HorizontalOptions="FillAndExpand">
+                                    <Image Source="{Binding Slika,Converter={StaticResource imgConv}}" WidthRequest="450" ></Image>
+                                </StackLayout>
+                                <StackLayout  Margin="0,0,0,10">
+                                    <Label Text="{Binding Naslov}" 
                                 d:Text="{Binding .}"
                                 LineBreakMode="NoWrap" 
                                 Style="{DynamicResource ListItemTextStyle}" 
                                 FontSize="16" />
-                                <StackLayout Orientation="Horizontal">
-                                    <Label Text="Cijena:" FontSize="15"></Label>
-                                    <Label Text="{Binding Cijena}" 
-                                 d:Text="Item descripton"
+                                    <Label Text="{Binding Sadrzaj}" 
+                                d:Text="Item descripton"
                                 LineBreakMode="NoWrap"
                                 Style="{DynamicResource ListItemDetailTextStyle}"
                                 FontSize="13" />
+                                    <Label Text="Vidi više..." FontAttributes="Italic" TextDecorations="Underline" FontSize="12">
+
+                                    </Label>
                                 </StackLayout>
-                                <Image Source="{Binding Slika,Converter={StaticResource imgConv}}"></Image>
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
 
             </ListView>
-            </StackLayout>
-        </ScrollView>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
