--- a/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/TerminiDetailPage.xaml
+++ b/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/TerminiDetailPage.xaml
@@ -13,8 +13,8 @@
         <ScrollView>
             <StackLayout Padding="10">
                 <Label Text="{Binding TerminPutovanja.TerminPutovanjaPodaci }"  HorizontalOptions="CenterAndExpand" FontAttributes="Bold" FontSize="Subtitle"></Label>
-                <Button Margin="0,10,0,0" Text="Rezerviši!" Clicked="Button_Clicked_1" BackgroundColor="DarkBlue" TextColor="White" FontSize="16"></Button>
-                <Button Text="Ostavi komentar..." HorizontalOptions="FillAndExpand" Clicked="Button_Clicked"></Button>
+                <Button Margin="0,10,0,0" Text="Rezerviši!" Clicked="Button_Clicked_1" BackgroundColor="Blue" TextColor="White" FontSize="16"></Button>
+                <Button Text="Ostavi komentar..." FontAttributes="Italic" HorizontalOptions="FillAndExpand" Clicked="Button_Clicked"></Button>
 
                 <Image Source="{Binding TerminPutovanja.Slika,Converter={StaticResource imgConv}}"></Image>
                 <StackLayout Orientation="Horizontal" IsVisible="{Binding OcjenaBool}">
@@ -39,14 +39,13 @@
                     <Label Text="Cijena:" Padding="5"></Label>
                     <Entry Text="{Binding TerminPutovanja.Cijena}" HorizontalOptions="FillAndExpand" IsReadOnly="True"></Entry>
                 </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="Aktivno:" Padding="5"></Label>
-                    <CheckBox IsChecked="{Binding TerminPutovanja.Aktivno}"  Color="DarkBlue" Margin="15,0,0,0" IsEnabled="False"></CheckBox>
-                </StackLayout>
+           
 
-                <StackLayout>
-                    <Label Text="Vodici: " ></Label>
-                    <Entry Text="{Binding BrojVodica}"></Entry>
+                <StackLayout >
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="Vodici: " ></Label>
+                        <Entry Text="{Binding BrojVodica}" IsReadOnly="True"></Entry>
+                    </StackLayout>
                     <Label Text="Izleti" FontSize="Subtitle" HorizontalOptions="Center"></Label>
                     <StackLayout>
 
