--- a/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/AktivniTerminiPage.xaml
+++ b/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/AktivniTerminiPage.xaml
@@ -15,15 +15,15 @@
         <ScrollView>
         <StackLayout>
 
-            
-                <StackLayout>
-                    <Label Text="AKTUELNA PUTOVANJA" Margin="0,10,0,0" FontSize="12" FontAttributes="Bold" HorizontalOptions="Center"></Label>
+
+                <StackLayout Margin="0,10,0,15">
+                    <Label Text="AKTUELNA PUTOVANJA"  FontSize="12" FontAttributes="Bold" HorizontalOptions="Center"></Label>
                 </StackLayout>
                 <ListView ItemsSource="{Binding TerminiList}" ItemSelected="ListView_ItemSelected">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout Padding="10">
+                            <StackLayout Padding="10" Margin="3">
                                 
                                 <Label Text="{Binding TerminPutovanjaPodaci}"
                                 d:Text="{Binding .}"
@@ -39,6 +39,7 @@
                                 FontSize="13" />
                                 </StackLayout>
                                 <Image Source="{Binding Slika,Converter={StaticResource imgConv}}"></Image>
+                                    <Label Text="Vidi više..." FontAttributes="Italic" FontSize="12" TextDecorations="Underline"></Label>
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
