--- a/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/TerminKomentariOcjenaPage.xaml
+++ b/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/TerminKomentariOcjenaPage.xaml
@@ -7,18 +7,18 @@
              x:Class="TuristickaAgencija.Mobile.Views.TerminKomentariOcjenaPage">
     <ContentPage.Content>
        
-            <ScrollView>
+            <!--<ScrollView>-->
 
                 <StackLayout Orientation="Vertical" Padding="20">
                     
-                    <Label Text="{Binding Putovanje.Putovanje}" FontSize="18" FontAttributes="Bold" HorizontalOptions="CenterAndExpand"></Label>
+                    <Label Text="{Binding Putovanje.Putovanje}" FontSize="18" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" Margin="0,0,0,10"></Label>
                 <StackLayout Orientation="Horizontal">
-                    <Label Text="Broj noćenja:" FontAttributes="Bold"></Label>
-                    <Label Text="{Binding Putovanje.VrstaPutovanja}" FontSize="14"></Label>
+                    <Label Text="BROJ NOĆENJA:" FontSize="14"></Label>
+                <Label Text="{Binding Putovanje.VrstaPutovanja}" FontSize="15"  FontAttributes="Bold"></Label>
                 </StackLayout>
                 <StackLayout Orientation="Horizontal" >
-                    <Label Text="Ocjena korisnika :"  FontSize="15"></Label>
-                    <Label  Text="{Binding ProsjecnaOcjena}"  FontSize="18" FontAttributes="Bold"  ></Label>
+                    <Label Text="OCJENA:"  FontSize="14"></Label>
+                    <Label  Text="{Binding ProsjecnaOcjena}"  FontSize="15" FontAttributes="Bold"  ></Label>
                 </StackLayout>
                 <StackLayout Margin="0,10,0,0">
                     <Label Text="KOMENTARI" FontSize="13" HorizontalOptions="Center"></Label>
@@ -26,7 +26,7 @@
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <ViewCell>
-                                    <StackLayout Padding="10" BackgroundColor="LightBlue">
+                                    <StackLayout Padding="10" BackgroundColor="LightGray" Margin="3">
 
                                         <Label Text="{Binding Sadrzaj}"
                                 d:Text="{Binding .}"
@@ -58,20 +58,9 @@
                         <Button Text="Ostavi komentar..." Clicked="Button_Clicked"></Button>
                     </StackLayout>
                 </StackLayout>
-                <!--<StackLayout Orientation="Vertical">
-                    <Label Text="Ostavite komentar:" FontAttributes="Italic"></Label>
-                    <Editor Text="{Binding KomentarSadrzaj}" HeightRequest="100"></Editor>
-                </StackLayout>
-                <StackLayout Orientation="Vertical">
-                    <Label Text="Vaša ocjena:" FontAttributes="Italic"></Label>
-                    <Picker ItemsSource="{Binding Ocjena}"></Picker>
-                </StackLayout>
-                <StackLayout Padding="20">
-                    <Button Text="OK" Clicked="Button_Clicked" HorizontalOptions="FillAndExpand" ></Button>
-                </StackLayout>-->
             </StackLayout>
          
-        </ScrollView>
+        <!--</ScrollView>-->
 
     </ContentPage.Content>
 </ContentPage>
