--- a/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/LoginPage.xaml
+++ b/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/LoginPage.xaml
@@ -13,15 +13,13 @@
     </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout>
-        <!--<StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Center">
-                <Image Source="logo.png" HeightRequest="200" WidthRequest="200"></Image>
-        </StackLayout>-->
+       
         <StackLayout VerticalOptions="FillAndExpand" Padding="10">
                 <Image Source="logo.png" HeightRequest="250" WidthRequest="250"></Image>
                 <Label Text="Korisničko ime"/>
             <Entry Text="{Binding KorisnickoIme}" HorizontalOptions="FillAndExpand"></Entry>
             <Label Text="Lozinka"/>
-            <Entry Text="{Binding Lozinka}" HorizontalOptions="FillAndExpand"></Entry>
+            <Entry Text="{Binding Lozinka}" IsPassword="True" HorizontalOptions="FillAndExpand"></Entry>
             <Button Command="{Binding LoginCommand}" Text="Prijava" BackgroundColor="DarkBlue" TextColor="White"></Button>
                 <Button Clicked="Button_Clicked" Text="Registruj se ovdje!" Margin="0,20,0,0" BackgroundColor="DarkBlue" TextColor="White"></Button>
         </StackLayout>
