--- a/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/AktuelneRezervacijePage.xaml
+++ b/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/Views/AktuelneRezervacijePage.xaml
@@ -12,18 +12,18 @@
     <ContentPage.Content>
            
             <ScrollView>
-            <StackLayout Padding="5,5,15,5">
+            <StackLayout Padding="5,5,15,5" >
                 <Label Text="REZERVACIJE" FontSize="12" FontAttributes="Bold" HorizontalOptions="Center" Margin="0,10,0,0"></Label>
                 <Label IsVisible="{Binding RezervacijeMessage}" Text="Nemate aktuelnih rezervacija!" BackgroundColor="IndianRed" TextColor="White" FontSize="15" Padding="10" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" HorizontalTextAlignment="Center" Margin="0,20,0,0"></Label>
                 <Button Text="Historija mojih putovanja" Clicked="Button_Clicked" BackgroundColor="DarkBlue" TextColor="White" Margin="30,0,30,50" ></Button>
                 <Label Text="Otkazivanje vršite klikom na rezervaciju." FontAttributes="Italic" FontSize="11" HorizontalOptions="Center"></Label>
 
-                <ListView ItemsSource="{Binding ListRezervacije}" ItemSelected="ListView_ItemSelected">
+                <ListView ItemsSource="{Binding ListRezervacije}" ItemSelected="ListView_ItemSelected" SelectedItem="{Binding TerminKoment}">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
-                                <StackLayout Orientation="Vertical" Padding="15" BackgroundColor="LightBlue" Margin="10">
-
+                                <StackLayout Orientation="Horizontal" Padding="15" BackgroundColor="LightBlue" Margin="10">
+                                    <StackLayout HorizontalOptions="FillAndExpand">
                                     <Label Text="{Binding PutovanjePodaci}"
                              
                                 LineBreakMode="NoWrap" 
@@ -40,7 +40,9 @@
                                 LineBreakMode="NoWrap"
                                 Style="{DynamicResource ListItemDetailTextStyle}"
                                 FontSize="15" />
+                                        </StackLayout>
                                     </StackLayout>
+
                                 </StackLayout>
                             </ViewCell>
 
